# Nooi

./: .replit  README.md  app.py  chat_logs.json  chatbot.py  load_text.py  pyproject.toml  qna.json  replacements.json  replit.nix  requirements.txt  user_data.json  user_memory.json  utils.py
